# ExperimentalServer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: AGENT_CLUSTERS.json  AGENT_CLUSTERS.md  a11y-specialist.md  analytics-insights.md  api-architect.md  architecture-advisor.md  architecture-designer.md  automation-architect.md  cloud-architect.md  cloud-cost-optimizer.md  community-builder.md  competitive-analyst.md  conversion-copywriter.md  csharp-dotnet-architect.md  data-engineer.md  database-optimizer.md  db-optimizer.md  debug-detective.md  design-systems-architect.md  devops-deployer.md  django-expert.md  docker-containerization-expert.md  docs-maintainer.md  email-campaign-architect.md  go-concurrency-expert.md  innovation-explorer.md  integration-specialist.md  java-enterprise-architect.md  kubernetes-specialist.md  langchain-architect.md  laravel-specialist.md  llm-integration-specialist.md  load-test-architect.md  ml-pipeline-engineer.md  mobile-web-expert.md  monetization-architect.md  nextjs-expert.md  observability-specialist.md  orchestration-specialist.md  perf-optimizer.md  (+25 more)
constraints/: ci.txt
docs/: api.md  architecture.md  changelog.md  contributing.md  index.md  security.md  threat-model.md
examples/: README.md  advanced_upload_nginx.md  basic_file_server.sh  notepad_client.py  opsec_deployment.md
exphttp/: __init__.py  __main__.py  cli.py  config.py  extensions.py  server.py
implementation-plan/: ACTIVE_PLAN.md
reviews/: 01_architecture_system_design_review.md  02_backend_frameworks_review.md  03_security_compliance_review.md  04_api_integration_review.md  05_infrastructure_devops_review.md  06_performance_optimization_review.md  07_reliability_operations_review.md  08_testing_quality_assurance_review.md  09_refactoring_code_quality_review.md  10_data_engineering_review.md  11_ai_llm_development_review.md  12_frontend_development_review.md  13_ui_ux_design_quality_review.md  14_product_strategy_review.md  15_growth_marketing_review.md  16_community_support_review.md  17_documentation_research_review.md
src/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  extensions.py  features.py  metrics.py  notepad_service.py  request_pipeline.py  server.py  settings.py  storage.py  websocket.py
tests/: __init__.py  conftest.py  test_check_stale_docs.py  test_cli.py  test_deployment_artifacts.py  test_extensions.py  test_handler_registry.py  test_import_boundaries.py  test_metrics.py  test_pytest_collection_policy.py  test_request_pipeline.py  test_server_live.py  test_settings.py  (+6 more)
(+394 files in other folders)
