[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exphttp"
dynamic = ["version"]
description = "Experimental HTTP server with custom methods, TLS, Basic Auth, and OPSEC mode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "http",
    "server",
    "tls",
    "https",
    "file-upload",
    "file-server",
    "opsec",
    "custom-methods",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/gkumurzhi/ExperimentalServer"
Issues = "https://github.com/gkumurzhi/ExperimentalServer/issues"

[project.scripts]
exphttp = "src.cli:main"

[project.optional-dependencies]
crypto = [
    "cryptography>=44.0",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
]
lint = [
    "ruff>=0.9.0",
    "mypy>=1.14",
]
all = [
    "exphttp[crypto,dev,lint]",
]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["data/**/*", "py.typed"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"

# coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

# ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "PTH"]

[tool.ruff.lint.per-file-ignores]
# Minified CSS/HTML/SVG in template strings cannot be line-wrapped
"src/utils/smuggling.py" = ["E501"]
"src/utils/captcha.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

# mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
